force-app/main/default/objects/AuthorizeNet_CustomSettings__c/AuthorizeNet_CustomSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>AuthorizeNet_CustomSettings</label>
</CustomObject>