force-app/main/default/objects/AuthorizeNet_CustomSettings__c/fields/API_Login_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Login_Key__c</fullName>
    <description>AuthorizeNet API Login Key details</description>
    <label>API Login Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>