force-app/main/default/objects/AuthorizeNet_CustomSettings__c/fields/Merchant_Name__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Name__c</fullName>
    <description>AuthorizeNet Merchant Name details</description>
    <label>Merchant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>